# JavaCallCSharp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CoreCLRHost.cpp  CoreCLRHost.hpp  Makefile  Managed.cs  Managed.csproj  Managed.sln  README.md  Sample1.cpp  Sample1.h  Sample1.java  azure-pipelines.yml  build.yml  cmake_install.cmake  utils.hpp
